# poros

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  configure  doxygen.conf
doc/: conf.py  index.md
src/: Aggregation.cpp  Aggregation.hpp  Alloc.hpp  Array.hpp  ArrayUtils.hpp  BFSBisector.hpp  Base.hpp  BisectionParameters.cpp  BisectionParameters.hpp  BisectionPartitioner.cpp  BisectionPartitioner.hpp  BitArray.hpp  CMakeLists.txt  CSRGraphData.hpp  ConstantArray.hpp  ConstantGraph.cpp  ConstantGraph.hpp  Debug.hpp  DiscretePriorityQueue.hpp  Dolos.cpp  DolosParameters.cpp  DolosParameters.hpp  Edge.hpp  EdgeSet.hpp  FMRefiner.cpp  FMRefiner.hpp  FixedPriorityQueue.hpp  FixedSet.hpp  Graph.hpp  GraphBuilder.cpp  GraphBuilder.hpp  GraphData.cpp  GraphData.hpp  GraphUtils.hpp  GridGraphGenerator.cpp  GridGraphGenerator.hpp  IAggregator.hpp  IBisector.hpp  ICSRGraphData.hpp  IContractor.hpp  (+58 more)
src/aggregation/: Aggregation.cpp  Aggregation.hpp  AggregationParameters.cpp  AggregationParameters.hpp  AggregatorFactory.cpp  AggregatorFactory.hpp  CMakeLists.txt  ContractorFactory.cpp  ContractorFactory.hpp  HeavyEdgeMatchingAggregator.cpp  HeavyEdgeMatchingAggregator.hpp  IAggregator.hpp  IContractor.hpp  MatchedAggregationBuilder.cpp  MatchedAggregationBuilder.hpp  RandomMatchingAggregator.cpp  RandomMatchingAggregator.hpp  SHEMRMAggregator.cpp  SHEMRMAggregator.hpp  SummationContractor.cpp  SummationContractor.hpp  TimedAggregator.cpp  TimedAggregator.hpp  TimedContractor.cpp  TimedContractor.hpp  VertexGroup.hpp  VertexGrouping.hpp
src/aggregation/test/: AggregationParameters_test.cpp  Aggregation_test.cpp  AggregatorFactory_test.cpp  CMakeLists.txt  HeavyEdgeMatchingAggregator_test.cpp  MatchedAggregationBuilder_test.cpp  RandomMatchingAggregator_test.cpp  SummationContractor_test.cpp
src/graph/: CMakeLists.txt  ConstantGraph.cpp  ConstantGraph.hpp  DegreeSortedVertexSet.cpp  DegreeSortedVertexSet.hpp  Edge.hpp  EdgeSet.hpp  Graph.cpp  Graph.hpp  GraphData.cpp  GraphData.hpp  GraphHandle.cpp  GraphHandle.hpp  GridGraphGenerator.cpp  GridGraphGenerator.hpp  IMappedGraph.hpp  MappedGraphWrapper.cpp  MappedGraphWrapper.hpp  OneStepGraphBuilder.cpp  OneStepGraphBuilder.hpp  PermutedVertexSet.hpp  RandomOrderVertexSet.cpp  RandomOrderVertexSet.hpp  Subgraph.cpp  Subgraph.hpp  SubgraphExtractor.cpp  SubgraphExtractor.hpp  TwoStepGraphBuilder.cpp  TwoStepGraphBuilder.hpp  Vertex.hpp  VertexSet.hpp
src/graph/test/: CMakeLists.txt  ConstantGraph_test.cpp  DegreeSortedVertexSet_test.cpp  Edge_test.cpp  GraphData_test.cpp  Graph_test.cpp  GridGraphGenerator_test.cpp  OneStepGraphBuilder_test.cpp  RandomOrderVertexSet_test.cpp  SubgraphExtractor_test.cpp  Subgraph_test.cpp  TwoStepGraphBuilder_test.cpp  VertexSet_test.cpp  Vertex_test.cpp
src/multilevel/: CompositeStoppingCriteria.cpp  CompositeStoppingCriteria.hpp  DiscreteCoarseGraph.cpp  DiscreteCoarseGraph.hpp  EdgeRatioStoppingCriteria.cpp  EdgeRatioStoppingCriteria.hpp  ICoarseGraph.hpp  IStoppingCriteria.hpp  VertexNumberStoppingCriteria.cpp  VertexNumberStoppingCriteria.hpp
src/multilevel/test/: CompositeStoppingCriteria_test.cpp  DiscreteCoarseGraph_test.cpp  EdgeRatioStoppingCriteria_test.cpp  VertexNumberStoppingCriteria_test.cpp
src/partition/: BFSBisector.cpp  BFSBisector.hpp  BisectionPartitioner.cpp  BisectionPartitioner.hpp  BisectorFactory.cpp  BisectorFactory.hpp  CMakeLists.txt  FMRefiner.cpp  FMRefiner.hpp  IBisector.hpp  IPartitioner.hpp  IRefiner.hpp  ITwoWayRefiner.hpp  MultiBisector.cpp  MultiBisector.hpp  MultilevelBisector.cpp  MultilevelBisector.hpp  MultilevelPartitioner.cpp  MultilevelPartitioner.hpp  Partition.hpp  PartitionParameters.cpp  PartitionParameters.hpp  Partitioning.cpp  Partitioning.hpp  PartitioningAnalyzer.cpp  PartitioningAnalyzer.hpp  PartitioningInformation.hpp  RandomBisector.cpp  RandomBisector.hpp  RandomFMBisector.cpp  RandomFMBisector.hpp  RecursiveBisectionPartitioner.cpp  RecursiveBisectionPartitioner.hpp  TargetPartitioning.cpp  TargetPartitioning.hpp  TimedBisector.cpp  TimedBisector.hpp  TimedTwoWayRefiner.cpp  TimedTwoWayRefiner.hpp  TwoWayConnectivity.cpp  (+5 more)
src/partition/test/: BFSBisector_test.cpp  BisectionPartitioner_test.cpp  CMakeLists.txt  FMRefiner_test.cpp  MultiBisector_test.cpp  MultilevelBisector_test.cpp  MultilevelPartioner_test.cpp  PartitionParameters_test.cpp  PartitioningAnalyzer_test.cpp  Partitioning_test.cpp  RandomBisector_test.cpp  RandomFMBisector_test.cpp  RecursiveBisectionPartitioner_test.cpp  TargetPartitioning_test.cpp  TwoWayConnectivityBuilder_test.cpp  TwoWayConnectivity_test.cpp
src/test/: Aggregation_test.cpp  Array.cpp  ArrayUtils_test.cpp  Array_test.cpp  BisectionParameters_test.cpp  BisectionPartitioner_test.cpp  BitArray_test.cpp  CMakeLists.txt  ConstantArray_test.cpp  ConstantArray_test.hpp  ConstantGraph_test.cpp  DolosParameters_test.cpp  Dolos_test.cpp  DomTest.hpp  Edge_test.cpp  FMRefiner_test.cpp  FixedPriorityQueue_test.cpp  FixedSet_test.cpp  GraphBuilder_test.cpp  GraphData_test.cpp  GridGraphGenerator_test.cpp  MutableArray_test.cpp  MutableArray_test.hpp  OneStepGraphBuilder_test.cpp  PartitionParameters_test.cpp  PartitioningAnalyzer_test.cpp  Partitioning_test.cpp  PorosParameters_test.cpp  Poros_test.cpp  RandomBisector_test.cpp  RandomFMBisector_test.cpp  RandomMatchingAggregator_test.cpp  RandomOrderVertexSet_test.cpp  RandomTraverser_test.cpp  RecursiveBisectionPartitioner_test.cpp  SubgraphExtractor_test.cpp  Subgraph_test.cpp  SummationContractor_test.cpp  TargetPartitioning_test.cpp  TwoStepGraphBuilder_test.cpp  (+3 more)
src/util/: CMakeLists.txt  GridGraphGenerator.cpp  GridGraphGenerator.hpp  IAllocatedData.hpp  IRandomEngine.hpp  RandomEngine.hpp  RandomEngineFactory.cpp  RandomEngineFactory.hpp  RandomEngineHandle.hpp  SimpleRandomEngine.cpp  SimpleRandomEngine.hpp  TimeKeeper.cpp  TimeKeeper.hpp  TimedProcess.cpp  TimedProcess.hpp  VertexQueue.hpp  VisitTracker.hpp
src/util/test/: GridGraphGenerator_test.cpp  RandomEngineFactory_test.cpp  VisitTracker_test.cpp
(+3 files in other folders)
